      \code{old} argument.

      \item Even data-only packages without \R code need a namespace and
      so may need to be installed under \R 2.14.0 or later.

      \item \code{stack()} now gives are error if no vector column is
      selected, rather than returning a 1-column data frame contrary to
      its documentation.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \command{R CMD Rd2dvi} is now defunct: use \command{R CMD Rd2pdf}.

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now defunct.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is now disallowed.

      Use of \code{chname} in \code{library.dynam()} with the extension
      \file{.so} or \code{.dll} (which was never allowed according
      to the help page) is defunct.  This also applies to
      \code{library.dynam.unload()} and to \code{useDynLib} directives
      in \code{NAMESPACE} files.

      \item The internal functions \code{.readRDS()} and
      \code{.saveRDS()} are now defunct.

      \item The off-line \code{help()} types \samp{"postscript"} and
      \samp{"ps"} are defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{stack()} now gives are error if no vector column is
      selected, rather than returning a 1-column data frame contrary to
      its documentation.

      \item \code{str(x, width)} now \dQuote{obeys} its \code{width}
      argument also for function headers
      and other objects \code{x}, where \code{deparse()} is applied.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item All packages must have a namespace, and one is created on
      installation if not supplied in the sources.  This means that any
      package without a namespace must be re-installed under this
      version of \R (but data-only packages without \R code can still be