@@ -16,6 +16,21 @@
 
 ## Derived from snow 0.3-6 by Luke Tierney
 
+.reg <-  new.env()
+assign("default", NULL, envir = .reg)
+
+defaultCluster <- function(cl = NULL)
+{
+    if(is.null(cl)) cl <- get("default", envir = .reg)
+    if(is.null(cl)) stop("no cluster supplied and none is registered")
+    cl
+}
+
+registerCluster <- function(cl = NULL)
+{
+    if(!is.null(cl)) checkCluster(cl)
+    assign("default", cl, envir = .reg)
+}
 
 #
 # Checking and subsetting
@@ -123,7 +138,13 @@ makeCluster <-
 }
 
 
-stopCluster <- function(cl) UseMethod("stopCluster")
+stopCluster <- function(cl)
+{
+    cl <- defaultCluster(cl)
+    if(identical(cl, get("default", envir = .reg)))
+        assign("default", NULL, envir = .reg)
+    UseMethod("stopCluster")
+}
 
 stopCluster.default <- function(cl) for (n in cl) stopNode(n)
 
