@@ -12,20 +12,21 @@
 \title{Implementation of Pierre L'Ecuyer's RngStreams}
 \description{
   This is an \R re-implementation of Pierre L'Ecuyer's \sQuote{RngStreams}
-  multiple streams of (pseudo-)random numbers.
+  multiple streams of pseudo-random numbers.
 }
 \usage{
 nextRNGStream(seed)
 nextRNGSubStream(seed)
 
-clusterSetRNGStream(cl, iseed)
+clusterSetRNGStream(cl = NULL, iseed)
 mc.reset.stream()
 }
 \arguments{
   \item{seed}{An integer vector of length 7 as given by
     \code{.Random.seed} when the \samp{"L'Ecuyer-CMRG"} RNG is in use.
     See \code{\link{RNG}} for the valid values.}
-  \item{cl}{A cluster from package \pkg{snow}.}
+  \item{cl}{A cluster from this package or package \pkg{snow}, or (if
+    \code{NULL}) the registered cluster.}
   \item{iseed}{An integer to be supplied to \code{\link{set.seed}}, or
     \code{NULL} not to set reproducible seeds.}
 }
