@@ -8,13 +8,13 @@
 \alias{parallel}
 \docType{package}
 \title{
-  Support for Parallel Computation.
+  Support for Parallel Computation
 }
 \description{
   Support for parallel computation, including random-number generation.
 }
 \details{
-  This package is under construction: it is intended to be released with
+  This package is under construction: a first version was released with
   \R 2.14.0.
 
   There is support for multiple RNG streams with the
@@ -22,10 +22,12 @@
 
   It contains functionality derived from and pretty much equivalent to
   that contained in packages \pkg{multicore} (with some low-level
-  functions renamed) and \pkg{snow} (for socket clusters only, but MPI,
-  NWS and PVM clusters generated by \pkg{snow} are also supported).
+  functions renamed and not exported) and \pkg{snow} (for socket
+  clusters only, but MPI, NWS and PVM clusters generated by \pkg{snow}
+  are also supported).
   
-  For a complete list of functions, use \code{library(help="parallel")}.
+  For a complete list of exported functions, use
+  \code{library(help="parallel")}.
 }
 \author{
   Brian Ripley, Luke Tierney and Simon Urbanek
