@@ -9,7 +9,7 @@
 \title{Divide Tasks for Distribution in a Cluster}
 \description{
   This divides up \code{1:nx} into \code{ncl} lists of approximately
-  equal size, as a way to allocate tasks to nodes in a cluser.
+  equal size, as a way to allocate tasks to nodes in a cluster.
   
   It is mainly for internal use, but some package authors have found it useful.
 }
